2006-06-27  Peter Dennis Bartok  <pbartok@novell.com>

	* Control.cs: Added 2.0 Scale(SizeF) method (Fixes 78700)

2006-06-27  Peter Dennis Bartok  <pbartok@novell.com> 

	* Form.cs: Fixed c+p error and added check to resize form if minimum
	  size is bigger than current size (Fixes #78709)

2006-06-26  Peter Dennis Bartok  <pbartok@novell.com> 

	* ThemeEngine.cs (..ctor): Properly use ToLower() (Fixes #78704)

2006-06-26  Mike Kestner  <mkestner@novell.com>

	* ComboBox.cs: only do Keypress handling in the combo when there  
	are items in the collection. Fixes #78710.

2006-06-26  Chris Toshok  <toshok@ximian.com>

	* Binding.cs: make this work bi-directionally.  also, clear up
	other mixups between Push/Pull Data (e.g. we're supposed to pull
	data when validating).

	* BindingManagerBase.cs: trim some fully qualified collection
	types.

	* PropertyManager.cs (get_IsSuspended): oops, fix this check.

2006-06-23  Chris Toshok  <toshok@ximian.com>

	* PropertyManager.cs: It appears (according to the unit tests)
	that PropertyManager doesn't use
	PropertyDescriptor.AddValueChanged to track propery value changes
	in its datasource, but uses the same scheme as Binding, where it
	looks for a <Property>Changed event and binds to it.

	Also, according to the docs, IsSuspended always returns false for
	a property manager with a non-null datasource.

2006-06-22  Peter Dennis Bartok  <pbartok@novell.com> 

	* Form.cs: (ShowDialog): If we're returning a forced cancel we still
	  need to update the actual DialogResult. (Fixes #78613)

2006-06-22  Peter Dennis Bartok  <pbartok@novell.com>

	* Form.cs (ShowDialog): Release any captures before running the
	  new message pump (fixes #78680)

2006-06-22  Mike Kestner  <mkestner@novell.com>

	* ListView.cs: Layout column widths properly in details mode even 
	if HeaderStyle.None is set.  Fixes #78691.

2006-06-21  Peter Dennis Bartok  <pbartok@novell.com>

	* FileDialog.cs: Fixed taborder to match MS. Fixes #77873 partially.
